[project]
name = "pro-civil-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ogene70",email = "ogene.joseph@etu.iut-tlse3.fr"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "pro_civil_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
